@@ -19,13 +19,13 @@
     </div>
 
     <ul class="menu">
-
+      <li><a href="#inicio" class="activo">Inicio</a></li>
       <li class="dropdown">
         <a href="#" class="dropbtn">Especialidades <i class="fa-solid fa-caret-down"></i></a>
         <div class="dropdown-content">
-          <a href="compu.html">Computación</a>
-          <a href="electricidad.html">Electricidad</a>
-          <a href="mecanica.html">Mecánica</a>
+          <a href="html/compu.html">Computación</a>
+          <a href="html/electricidad.html">Electricidad</a>
+          <a href="html/mecanica.html">Mecánica</a>
         </div>
       </li>
       <li><a href="#contactos">Contactos</a></li>
