@@ -34,3 +34,6 @@ FRAN
 
 MARCO
 - Se agrego un boton despegable llamdo Vistas de pruebas 
+
+10/11
+- Se arreglo botones de inicio 
